Add image source link

--- a/JavaScript/Step05/05-1_OOP/객체지향 프로그래밍.md
+++ b/JavaScript/Step05/05-1_OOP/객체지향 프로그래밍.md
@@ -84,6 +84,7 @@ console.log(anotherBall.name); //MyBall
 캡슐화는 객체지향 프로그래밍의 기본적인 개념 중 하나이다. 캡슐화는 클래스 같은 한 단위 내에서 해당 데이터에 대해 작동하는 데이터와 메소드를 번들링(캡슐화) 한다는 개념이다.
 
 ![encapsulation image](./Encapsulation.png)
+이미지 출처 : https://www.youtube.com/watch?v=pTB0EiLXUC8
 
 간단히 말하면, 관련 있는 데이터(변수)와 메소드를 묶는 것(grouping)을 캡슐화라고 한다.
 
@@ -128,7 +129,8 @@ const employee = {
 
 추상화는 사용자가 모든 숨겨진 복잡성을 이해하거나 생각하지 않고도 제공된 추상화 위에 더 복잡한 논리를 구현할 수 있게 해준다.
 
-![encapsulation image](./Abstraction.png)
+![abstraction image](./Abstraction.png)
+이미지 출처 : https://www.youtube.com/watch?v=pTB0EiLXUC8
 
 추상화 개념 이해를 위해 DVD player에 대해 생각해보자.
 
